--- a/app/Resources/views/horoscopo/fuerzag.html.twig
+++ b/app/Resources/views/horoscopo/fuerzag.html.twig
@@ -18,7 +18,7 @@
   	</div>
     <div class="row">
         <div class="col text-center">
-            <a download="La Fuerza G.jpg" href="{{ asset('img/') }}" title="La Carretilla">
+            <a download="La Fuerza G.jpg" href="{{ asset('img/FuerzaG.jpg') }}" title="La Carretilla">
                 <div class="btn btn-primary"><h2>Descargar</h2></div>
             </a>
         </div>
