--- a/app/Resources/views/horoscopo/index.html.twig
+++ b/app/Resources/views/horoscopo/index.html.twig
@@ -7,7 +7,7 @@
 <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
-      	<a href="{{ url('astrologica') }}" style="text-decoration: none; color: #212529;">
+      	<a href="{{ url('decanatos') }}" style="text-decoration: none; color: #212529;">
 	      <div class="row no-gutters">
 	        
 	        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
@@ -58,7 +58,7 @@
 	        	<div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg'); background-size: 100% 100%;"></div>
 	      	</div>
 	    </a>
-	    <a href="{{ url('sexo') }}" style="text-decoration: none; color: #212529;">
+	    <a href="{{ url('puntog') }}" style="text-decoration: none; color: #212529;">
 	      	<div class="row no-gutters">
 	        	
 	        	<div class="col-lg-6 order-lg-2 my-auto showcase-text">
@@ -92,7 +92,7 @@
 		        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-5.jpg'); background-size: 100% 100%;"></div>
 		    </div>
 		</a>
-		<a href="{{ url('forma') }}" style="text-decoration: none; color: #212529;">
+		<a href="{{ url('meditacion') }}" style="text-decoration: none; color: #212529;">
 	      	<div class="row no-gutters">
 	        	
 	        	<div class="col-lg-6 order-lg-2 my-auto showcase-text">
