--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,7 +54,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Horóscopo-Astrológica
+            Horóscopo-Astrología
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{{url('decanatos')}}">Los Decanatos</a>
