--- a/app/Resources/views/horoscopo/guia_astrologica.html.twig
+++ b/app/Resources/views/horoscopo/guia_astrologica.html.twig
@@ -57,27 +57,27 @@
             <b style="padding-left: 4em;"><i> Características:</i></b> maginación, sensibilidad, empatía
           </p>
 
-          <table align="center" border="1px solid #cecece;" width="400">
+          <table class="table table-hover" align="center" border="1px solid #cecece;" width="400">
             <tr>
-              <th>FUEGO</th>
+              <th class="bg-info">FUEGO</th>
               <td>Aries</td>
               <td>Leo</td>
               <td>Sagitario</td>
             </tr>
             <tr>
-              <th>TIERRA</th>
+              <th class="bg-info">TIERRA</th>
               <td>Tauro</td>
               <td>Virgo</td>
               <td>Capricornio</td>
             </tr>
             <tr>
-              <th>AIRE</th>
+              <th class="bg-info">AIRE</th>
               <td>Géminis</td>
               <td>Virgo</td>
               <td>Acuario</td>
             </tr>
             <tr>
-              <th>AGUA</th>
+              <th class="bg-info">AGUA</th>
               <td>Cáncer</td>
               <td>Escorpio</td>
               <td>Piscis</td>
