--- a/app/Resources/views/horoscopo/decanatos.html.twig
+++ b/app/Resources/views/horoscopo/decanatos.html.twig
@@ -49,8 +49,8 @@
       		</p>
           <br>
 
-          <table align="center" border="1px solid #cecece;" width="400">
-            <thead>
+          <table class="table table-hover" align="center" border="1px solid #cecece;" width="400">
+            <thead class="thead-light">
               <tr>
                 <th>SIGNOS</th>
                 <th>DECANATO</th>
