--- a/app/Resources/views/horoscopo/guia_astrologica.html.twig
+++ b/app/Resources/views/horoscopo/guia_astrologica.html.twig
@@ -127,8 +127,8 @@
            Descubierto sólo un poco más de ochenta años atrás, la interpretación de los significados de este planeta se formuló hace poco. Plutón representa el subconsciente profundo ; es decir, el centro de memoria reprimida. Símbolo de la muerte y el renacimiento, que nos da la fuerza para regenerarse. La casa de Plutón está en Escorpio.
           </p><br>
 
-          <table align="center" border="1px solid #cecece;" width="400">
-            <thead>
+          <table class="table table-hover"  align="center" border="1px solid #cecece;" width="400">
+            <thead class="thead-light">
               <tr>
                 <th>SIGNO</th>
                 <th>PLANETA</th>
@@ -200,8 +200,8 @@
           </table>
           <br>
           <h3>OTRAS CORRESPONDENCIAS  </h3>
-          <table align="center" border="1px solid #cecece;" width="400">
-            <thead>
+          <table class="table table-hover" align="center" border="1px solid #cecece;" width="400">
+            <thead class="thead-light">
               <tr>
                 <th>SIGNOS</th>
                 <th>PARTES DEL CUERPO</th>
